# okitten

./: .envrc  .gitignore  README.md  dune-project  flake.nix  okitten.opam
lib/: client.ml  client.mli  client_options.mli  dune  okitten.ml  utils.ml  utils.mli  version.ml
lib/client/: EventHandler.ml  client.ml  ctx.ml
lib/client/sharding/: commands.ml  coordinator.ml  coordinator.mli  coordinator_commands.ml  runner.ml  runner_commands.ml  shard.ml  shard.mli
lib/gateway/: events.ml  events.mli  sharder.ml  sharder.mli
lib/http/: http.ml  http.mli  ratelimiter.ml  ratelimiter.mli  request.ml  request.mli
lib/models/: dispatch.ml  gateway.ml  models.ml  presence.ml  user.ml
lib/models/channel/: message.ml
lib/models/gateway/: identify.ml  resume.ml
lib/models/payload/: identify.ml  identify.mli  payload.ml
lib/rest/: endpoints.ml  endpoints.mli  ratelimit.ml  ratelimit.mli  rest.ml  rest.mli
test/: dune
